--- a/drivers/Kconfig
+++ b/drivers/Kconfig
@@ -229,4 +229,8 @@ source "drivers/halls/Kconfig"
 
 source "drivers/trusty/Kconfig"
 
+source "techpack/Kconfig"
+
+source "drivers/kernelsu/Kconfig"
+
 endmenu
